--- a/deploy.yml
+++ b/deploy.yml
@@ -28,7 +28,8 @@ profiles:
         host: akash
         tier: community
       signedBy:
-        anyOf: "akash1nxq8gmsw2vlz3m68qvyvcf3kh6q269ajvqw6y0"
+        anyOf: 
+        - "akash1nxq8gmsw2vlz3m68qvyvcf3kh6q269ajvqw6y0"
           
       pricing:
         web:
